crates/synd_term/tests/snapshots/integration__test__happy.snap
---
source: crates/synd_term/tests/integration.rs
expression: application.buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 120, height: 30 },
    content: [
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                    ▐█▌          ▐█  █           ▐   █           ▐█                                     ",
        "                                    █ █           █              █                █                                     ",
        "                                    █▌  █ █ ██▌   █ ▐█  ▐█▌ ▐█▌ ▐██ ▐█  ▐█▌ ██▌   █                                     ",
        "                                    ▐█  █ █ █ █ ▐██  █  █ █   █  █   █  █ █ █ █ ▐██                                     ",
        "                                     ▐█ █ █ █ █ █ █  █  █   ▐██  █   █  █ █ █ █ █ █                                     ",
        "                                    █ █ ▐██ █ █ █ █  █  █ █ █ █  █▐  █  █ █ █ █ █ █                                     ",
        "                                    ▐█▌   █ █ █ ▐█▐▌▐█▌ ▐█▌ ▐█▐▌ ▐▌ ▐█▌ ▐█▌ █ █ ▐█▐▌                                    ",
        "                                        ██▌                                                                             ",
        "                                                                                                                        ",
        "                                                          Login                                                         ",
        "                                    ────────────────────────────────────────────────                                    ",
        "                                     󰊤 GitHub                                                                          ",
        "                                      󰊭 Google                                                                          ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                   j/k:󰹹  Ent:󰏌  q:                                                    ",
    ],
    styles: [
        x: 0, y: 0, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 58, y: 16, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: BOLD,
        x: 63, y: 16, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 36, y: 18, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: BOLD,
        x: 84, y: 18, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 51, y: 29, fg: Rgb(111, 93, 99), bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
        x: 70, y: 29, fg: Rgb(254, 205, 178), bg: Rgb(43, 41, 45), underline: Reset, modifier: NONE,
    ]
}
